# algorithm

./: .condarc  .gitignore  Pipfile  README.md  base.py  conda.yaml  db-test.db  pyproject.toml  test.ipynb  test.py
LeetCode/: 1-100-c++.ipynb  1-100-python.ipynb  1-100.ipynb  101-200-python.ipynb  README.md
docs/: changelog.md  version.md
docs/notes/: loss.md
image_processing/: __init__.py
image_processing/experiment-1/: experiment.m  region_grow.m  water_shed.m
image_processing/histogram/: __init__.py  distribution.py  equalization.py  mean_statistic.py  normalization.py  show_hist_from_img.py  show_hist_from_json.py  specification.py  specification_med_img.py  statisitc.py
image_processing/mask/: __init__.py  mask_extract.py  mask_inv.py  region_growth.py  rgb_mask.py  rgb_mask_gui.py
machine_learning/: __init__.py
machine_learning/deep_learning/: __init__.py  dir_struction.py
machine_learning/deep_learning/GAN/: simple_GAN
machine_learning/deep_learning/mnist/: README.md  mnist.py  mnist_load_data.py
machine_learning/deep_learning/pytorch_learning/: __init__.py  tensor.ipynb
machine_learning/deep_learning/tensorflow_learning/: __init__.py  word2vec.ipynb
machine_learning/random_forest/: __init__.py
numpy/: __init__.py
numpy_learning/: __init__.py  array.py  echelon_matrix.py  matrix.py  max.py  random_matrix.py  reduced_echelon_matrix.py  solution.py  test.ipynb  vector.py
numpy_learning/pandas_learning/: __init__.py
sundry/: VideoCapture.py  class_test.py  suzhou_data.ipynb
