[tool.poetry]
name = "algorithm"
version = "0.1.0"
description = ""
authors = ["diklios <47837462+diklios5768@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
# tools
click = "^8.1.3"
requests = "^2.28.1"
tqdm = "^4.64.0"
# table
pandas = "^1.4.3"
openpyxl = "^3.0.10"
# doc
python-docx = "^0.8.11"
PyPDF2 = "^2.10.4"
jupyterlab = "^3.4.5"
notebook = "^6.4.12"
#meachine learning
opencv-python = "4.5.5.64"
scikit-learn = "^1.1.1"
keras = "^2.9.0"
scipy = "^1.8.1"
sympy = "^1.10.1"
#deep learing
Pillow = "^9.2.0"
torch = "^1.12.0"
torchvision = "^0.13.0"
torchaudio = "^0.12.0"
seaborn = "^0.11.2"
patchify = "^0.2.3"
tensorflow = "^2.9.1"
# nlp



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
