[tool.poetry]
name = "algorithm"
version = "0.2.0"
description = "multi "
authors = ["diklios <47837462+diklios5768@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
# tools
click = "^8.1.3"
requests = "^2.28.1"
tqdm = "^4.64.0"
# table
pandas = "^1.4.3"
openpyxl = "^3.0.10"
xlsxwriter = "^3.0.3"
prettytable = "^3.4.1"
# jupyter
jupyterlab = "^3.4.5"
jupyter = "^1.0.0"
notebook = "^6.4.12"
# fig
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
# poetry plugin
poethepoet = "^0.16.2"
# HTML
dominate = "^2.7.0"
visdom = "^0.1.8.9"


[tool.poetry.group.doc.dependencies]
python-docx = "^0.8.11"
PyPDF2 = "^2.10.4"

[tool.poetry.group.image.dependencies]
opencv-python = "4.5.5.64"
Pillow = "^9.2.0"

[tool.poetry.group.nlp.dependencies]
transformers = "^4.20.1"

[tool.poetry.group.ml.dependencies]
scikit-learn = "^1.1.1"
scikit-image = "^0.19.3"
keras = "^2.9.0"
scipy = "^1.8.1"
sympy = "^1.10.1"

[tool.poetry.group.dl.dependencies]
wandb = "^0.13.3"
tensorboard = "^2.10.0"
tensorboardX = "^2.5.1"

[tool.poetry.group.torch.dependencies]
torchvision = "^0.13.0"
torchaudio = "^0.12.0"
torchgeometry = "^0.1.2"
timm = "^0.6.7"
einops = "^0.4.1"
torchsummary = "^1.5.1"
torchkeras = "^3.2.3"
torchsampler = "^0.1.2"

[tool.poetry.group.openmmlab.dependencies]
openmim = "^0.3.1"
mmgen = "^0.7.1"

[tool.poetry.group.tensorflow.dependencies]
tensorflow = "^2.9.1"

[tool.poe.tasks.torch-gpu]
cmd = "pip install torch --upgrade --extra-index-url https://download.pytorch.org/whl/${CUDA}"
args = [
    { name = "CUDA", default = "cu116", positional = true, help = "CUDA version" }
]

[tool.poe.tasks.torch-gpu-conda]
cmd = "conda install pytorch torchvision torchaudio cudatoolkit=${CUDA} -c pytorch -c conda-forge"
args = [
    { name = "CUDA", default = "11.6", positional = true, help = "CUDA version" }
]

[tool.poe.tasks.mmcv]
cmd = "mim install mmcv-full"

[tool.poe.tasks.R]
cmd = "conda install r-irkernel -c r -y"

[tool.poe.tasks.cplusplus]
cmd = "conda install xeus-cling -c conda-forge -y"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
